--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Marck+Script&family=Merienda:wght@300;400;500;600;700;800;900&family=Neucha&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Tangerine:wght@400;700&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.bg-about{
+  background-image: url("./images/img2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+}
+.bg-services{
+  background-image: url("./images/bg-service.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  
 }
